# Text_Processor

./: .gitignore  CMakeLists.txt  known_issues.txt  main.cpp
classes/: Config.cpp  Config.h  TextProcessor.cpp  TextProcessor.h
classes/command_handlers/: Command.cpp  Command.h  CommandFactory.cpp  CommandFactory.h  CommandUtil.cpp  CommandUtil.h  ConsoleCommandHandler.cpp  ConsoleCommandHandler.h  ConsoleCommandHandlerUtil.cpp  ConsoleCommandHandlerUtil.h  ICommandHandler.cpp  ICommandHandler.h  Macro.cpp  Macro.h
classes/file_workers/: IFileReader.h  IFileWriter.cpp  IFileWriter.h  TextFileReader.cpp  TextFileReader.h  TextFileWriter.cpp  TextFileWriter.h
classes/line/: BaseLine.cpp  BaseLine.h  BaseLineDerivedClasses.cpp  BaseLineDerivedClasses.h  LineComparator.cpp  LineComparator.h  LineFactory.h  LineParser.cpp  LineParser.h
documentation/html/: _base_line_8cpp.html  _base_line_8cpp__incl.dot  _base_line_8h.html  _base_line_8h.js  _base_line_8h__dep__incl.dot  _base_line_8h__incl.dot  _base_line_8h_source.html  _base_line_derived_classes_8cpp.html  _base_line_derived_classes_8cpp__incl.dot  _base_line_derived_classes_8h.html  _base_line_derived_classes_8h.js  _base_line_derived_classes_8h__dep__incl.dot  _base_line_derived_classes_8h__incl.dot  _base_line_derived_classes_8h_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _config_8cpp.html  _config_8cpp__incl.dot  _config_8h.html  _config_8h.js  _config_8h__dep__incl.dot  _config_8h__incl.dot  _config_8h_source.html  _console_command_handler_8cpp.html  _console_command_handler_8cpp__incl.dot  _console_command_handler_8h.html  _console_command_handler_8h.js  _console_command_handler_8h__dep__incl.dot  (+210 more)
(+201 files in other folders)
